--- a/src/app/crm/algorithmus/algorithmus.html
+++ b/src/app/crm/algorithmus/algorithmus.html
@@ -144,7 +144,7 @@
       <div class="company-info">
         <h1>{{ companyControl.company()?.name }}</h1>
         <p>
-          {{ companyControl.company()?.street }} {{ companyControl.company()?.number }}<br />{{
+          {{ companyControl.company()?.street }} {{ companyControl.company()?.street_number }}<br />{{
             companyControl.company()?.postcode
           }}
           {{ companyControl.company()?.city }}
