--- a/src/app/crm/customers/customer-details/customer-details.html
+++ b/src/app/crm/customers/customer-details/customer-details.html
@@ -54,7 +54,7 @@
     <!-- Address -->
     <dl>
       <dt>Straße & Nr.</dt>
-      <dd>{{ customer()?.street }} {{ customer()?.number }}</dd>
+      <dd>{{ customer()?.street }} {{ customer()?.street_number }}</dd>
     </dl>
     
     <dl>
