--- a/src/app/crm/shared/invoice/invoice.html
+++ b/src/app/crm/shared/invoice/invoice.html
@@ -2,7 +2,7 @@
     <header class="invoice-header">
         <div class="company-info">
         <h1>{{companyControl.company()?.name}}</h1>
-        <p>{{companyControl.company()?.street}} {{companyControl.company()?.number}}<br>{{companyControl.company()?.postcode}} {{companyControl.company()?.city}} </p>
+        <p>{{companyControl.company()?.street}} {{companyControl.company()?.street_number}}<br>{{companyControl.company()?.postcode}} {{companyControl.company()?.city}} </p>
         </div>
         <a href="/" class="logo">
         <img width="60" height="60" src="./assets/SK-metatag.png" alt="Start in Krypto">
