--- a/src/app/crm/customers/customers.html
+++ b/src/app/crm/customers/customers.html
@@ -30,7 +30,7 @@
                 <td>{{ customer.first_name }}</td>
                 <td>{{ customer.last_name }}</td>
                 <td>{{ customer.street }}</td>
-                <td>{{ customer.number }}</td>
+                <td>{{ customer.street_number }}</td>
                 <td>{{ customer.postcode }}</td>
                 <td>{{ customer.city }}</td>
                 <td>{{ customer.email }}</td>
