--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,8 @@ app-navbar {
   border-right: 1px solid basic.$border-color;
   font-size: 1.25rem;
 }
+
+app-dashboard-customer,
 app-my-courses,
 app-list-of-lessons,
 app-all-courses,
