--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -5,10 +5,10 @@
     
     <ul>
         <li>
-            <a href="/impressum.html">Impressum</a>
+            <a href="/impressum">Impressum</a>
         </li>
         <li>
-            <a href="/datenschutz.html">Datenschutz</a>
+            <a href="/datenschutz">Datenschutz</a>
         </li>
     </ul>
 
@@ -25,4 +25,4 @@
         </li>
     </ul>
 </nav>
-<span class="footer-copyright">© <span class="year"></span> Start in Krypto - Dein Einstieg in die Krypto-Welt.</span>
+<span class="footer-copyright">© <span class="year">{{currentYear}}</span> Start in Krypto - Dein Einstieg in die Krypto-Welt.</span>
