start with translate

--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -21,25 +21,29 @@
 
   <ul class="menu-list" [ngClass]="{ 'show-menu': isMenuOpen }">
     <li>
-      <a href="/#start" class="nav-link" #navLink (click)="closeMenu()"> Start </a>
+      <a href="/#start" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.START" | translate}} </a>
     </li>
     <li>
-      <a href="/#dein-weg" class="nav-link" #navLink (click)="closeMenu()"> Dein Weg </a>
+      <a href="/#dein-weg" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.YOUR_WAY" | translate}} </a>
     </li>
     <li>
-      <a href="/#angebot" class="nav-link" #navLink (click)="closeMenu()"> Angebot </a>
+      <a href="/#angebot" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.OFFER" | translate}} </a>
     </li>
     <li>
-      <a href="/#uber-mich" class="nav-link" #navLink (click)="closeMenu()"> Über mich </a>
+      <a href="/#uber-mich" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.ABOUT_ME" | translate}} </a>
     </li>
     <li>
-      <a href="/#Rezensionen" class="nav-link" #navLink (click)="closeMenu()"> Rezensionen </a>
+      <a href="/#Rezensionen" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.REVIEWS" | translate}} </a>
     </li>
     <li>
-      <a href="/#kontakt" class="nav-link" #navLink (click)="closeMenu()"> Kontakt </a>
+      <a href="/#kontakt" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.CONTACT" | translate}} </a>
     </li>
     <li>
-      <a routerLink="faq" class="nav-link" #navLink (click)="closeMenu()"> FAQ </a>
+      <a routerLink="faq" class="nav-link" #navLink (click)="closeMenu()"> {{"MENU.FAQ" | translate}} </a>
+    </li>
+    <li class="languages">
+                    <button class="en" (click)="changeLanguage('pl')" [ngClass]="{'selected': selectedLanguage === 'pl'}">PL</button>
+                    <button class="de" (click)="changeLanguage('de')" [ngClass]="{'selected': selectedLanguage === 'de'}">DE</button>
     </li>
     <li>
       <app-appointment-button class="main-button-header" #navLink (click)="closeMenu()"></app-appointment-button>
