--- a/src/app/website/main/main.html
+++ b/src/app/website/main/main.html
@@ -4,8 +4,8 @@
   <img class="bitcoin" width="100" height="100" src="./assets/bitcoin-coin.svg" alt="" />
   <div class="welcome-content">
     <h1>
-      WILLKOMMEN <br />
-      bei <br />
+      <span>{{ "WELCOME.WELCOME" | translate }}</span> <br />
+      <span>{{ "WELCOME.IN" | translate}}</span><br />
       <span class="start">S</span>tart in <span class="krypto">K</span>rypto
     </h1>
 
