change of the in why start in krypto

--- a/src/app/website/main/main.scss
+++ b/src/app/website/main/main.scss
@@ -754,7 +754,7 @@ blockquote footer a:hover {
 
   .why-start-in-krypto-img {
     border: 0.25rem solid basic.$primary; /* Inner border */
-    box-shadow: 0 0 0 0.25rem basic.$primary; /* Outer border */
+    box-shadow: 0 0 0 0.25rem basic.$secondary; /* Outer border */
     border-radius: 50%;
     width: 168px;
     height: 168px;
