--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -37,17 +37,17 @@
   color: basic.$main;
   mix-blend-mode: multiply;
   outline: transparent;
-  border: 2px solid transparent;
+  border: .125rem solid transparent;
 }
 
 .main-nav .logo:focus {
-  border: 2px dotted basic.$primary;
+  border: .125rem dotted basic.$primary;
   outline: basic.$primary;
 }
 
 .logo:focus:not(:focus-visible) {
   outline: none;
-  border: 2px solid transparent;
+  border: .125rem solid transparent;
 }
 
 .main-nav .logo img {
@@ -56,7 +56,7 @@
 }
 
 .main-nav .logo img:hover {
-  filter: drop-shadow(2px 4px 6px basic.$primary);
+  filter: drop-shadow(.125rem .25rem .375rem basic.$primary);
 }
 
 .main-nav .menu-list {
@@ -94,7 +94,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: .125rem;
   background-color: basic.$main;
   transform: scaleX(0);
   transform-origin: right;
@@ -120,7 +120,7 @@
 // Languages
 
 .dropbtn .languages {
-  transform: translateY(-5px);
+  transform: translateY(-0.3125rem);
   column-gap: 1.25rem;
   display: flex;
   font-style: normal;
@@ -132,10 +132,10 @@
   display: flex;
   color: basic.$primary;
   cursor: pointer;
-  border: solid 2px transparent;
+  border: .125rem solid transparent;
   border-radius: 0.5rem;
   line-height: normal;
-  padding: 2px;
+  padding: .125rem;
 }
 
 .dropdown .languages button:hover {
@@ -147,22 +147,22 @@
 }
 
 .dropdown .languages .selected {
-  border: solid 2px basic.$primary;
+  border: .125rem solid basic.$primary;
   border-radius: 0.5rem;
   line-height: normal;
-  padding: 2px;
+  padding: .125rem;
 }
 
 .dropbtn {
-  padding: 16px;
-  font-size: 16px;
+  padding: 1rem;
+  font-size: 1rem;
   border: none;
   cursor: pointer;
 }
 
 .dropbtn img:hover,
 .dropbtn img:focus {
-    filter: drop-shadow(2px 4px 6px basic.$primary);
+    filter: drop-shadow(.125rem .25rem .375rem basic.$primary);
 }
 
 .dropdown {
@@ -176,16 +176,16 @@
   flex-direction: column;
   padding: 1rem;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 6.25rem;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.2);
   z-index: 2;
   border-radius: basic.$border-radius;
 }
 
 .dropdown .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: .75rem 1rem;
   text-decoration: none;
   display: block;
 }
@@ -226,11 +226,11 @@
 
   .main-nav .hamburger {
     display: flex;
-    border: 2px dotted transparent;
+    border: .125rem dotted transparent;
   }
 
   .main-nav .hamburger:focus-visible {
-    border: 2px dotted basic.$primary;
+    border: .125rem dotted basic.$primary;
     outline: basic.$primary;
   }
 
@@ -251,7 +251,7 @@
   }
 
   .main-nav .pos-fix-hamburger:focus-visible {
-    border: 2px dotted basic.$primary;
+    border: .125rem dotted basic.$primary;
     outline: basic.$primary;
   }
   .main-button-header {
@@ -262,7 +262,7 @@
 @media (max-height: 400px) {
   .main-nav .menu-list {
     overflow-y: auto;
-    padding-block: 50px;
+    padding-block: 3.125rem;
   }
 }
 
@@ -277,7 +277,7 @@
   }
 
   .main-nav .pos-fix-hamburger {
-    right: 16px;
-    top: -5px;
+    right: 1rem;
+    top: -0.3125rem;
   }
 }
