--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -85,7 +85,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="faq" class="nav-link" #navLink (click)="closeMenu()">
+      <a routerLink="/faq" class="nav-link" #navLink (click)="closeMenu()">
         {{ 'MENU.FAQ' | translate }}
       </a>
     </li>
