--- a/src/app/website/termin/termin.html
+++ b/src/app/website/termin/termin.html
@@ -4,5 +4,7 @@
       <img class="strong-arrow" src="./assets/arrow.svg" alt="Zurück auf die Hauptseite" />
     </a>
     <h1>Termin</h1>
+
+    <div #tidycal class="tidycal-embed" data-path="startinkryptoelisabeth/startinkrypto"></div>
   </div>
 </section>
