update style main button

--- a/src/app/shared/appointment-button/appointment-button.scss
+++ b/src/app/shared/appointment-button/appointment-button.scss
@@ -56,7 +56,7 @@
   min-height: 25px;
 }
 
-.main-button span {
+.main-button .main-button-text span {
   display: contents;
   font-weight: bold;
 }
